k8s/docker-registry-deployment.yaml
# deploy one docker registry
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: docker-registry-deployment
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - name: registry
          containerPort: 5000
        volumeMounts:
        - name: image-store
          mountPath: /var/lib/registry
        - name: auth
          mountPath: /auth
      volumes:
      - name: image-store
        hostPath:
          type: DirectoryOrCreate
          path: /data/docker-registry
      - name: auth
        secret:
          secretName: docker-registry-auth-secret
