k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec:
  selector:
    app: site
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
