k8s/site-service.yaml
# simple service definition pointing to the site deployment
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec:
  selector:
    app: site
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
