k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - "home.bentheelder.io"
    secretName: home-bentheelder-tls
  rules:
  - host: "home.bentheelder.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: site-service
          servicePort: 8080
