k8s/site-ingress.yaml
# ingress for the site-service with tls via kube-lego
# obviously the hosts are specific to my site
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - "bentheelder.io"
    - "home.bentheelder.io"
    secretName: site-ingress-tls
  rules:
  - host: "bentheelder.io"
    http:
        paths:
        - path: /
          backend:
            serviceName: site-service
            servicePort: 8080
  - host: "home.bentheelder.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: site-service
          servicePort: 8080
